test/conformance/chainsaw/validating-policies/background-report/bad-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-no-reporting
spec:
  containers:
  - name: nginx
    image: nginx:latest
