test/conformance/chainsaw/validating-policies/background-report/report.yaml
apiVersion: wgpolicyk8s.io/v1alpha2

kind: PolicyReport

metadata:

  labels:

    app.kubernetes.io/managed-by: kyverno

  ownerReferences:

  - apiVersion: apps/v1

    kind: Deployment

    name: background-report

scope:

  apiVersion: apps/v1

  kind: Deployment

  name: background-report

results:

- message: Deployment labels must be env=prod but found env=staging

  policy: background-report

  result: fail

  scored: true

  source: KyvernoValidatingPolicy

summary:

  error: 0

  fail: 1

  pass: 0

  skip: 0

  warn: 0
