test/conformance/chainsaw/validating-policies/background-report/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: reporting-validating-test
spec:
  steps:
  - name: install policy
    try:
    - create:
        file: policy.yaml
    - create:
        file: deployment.yaml
